feat: allow to compile with 21 but use 17 runtime